--- a/production.ini
+++ b/production.ini
@@ -12,6 +12,9 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+sqlalchemy.url = sqlite:///%(here)s/users.sqlite
+retry.attempts = 3
+auth.secret = TIMbarrel
 
 ###
 # wsgi server configuration.
@@ -20,6 +23,12 @@ pyramid.default_locale_name = en
 [server:main]
 use = egg:waitress#main
 listen = *:8088
+
+[alembic]
+# path to migration scripts
+script_location = pymol_ngl_transpiler_app/alembic
+file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
+# file_template = %%(rev)s_%%(slug)s
 
 ###
 # logging configuration
