--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@ coverage
 test
 .sqlite
 .egg-info
-.p
+*.egg-info
+*.p
 pymol_ngl_transpiler_app/demo/*.pdb
 pymol_ngl_transpiler_app/user-data/*.p
 pymol_ngl_transpiler_app/user-data/*.ep
