:pencil: conda way?

--- a/production.ini
+++ b/production.ini
@@ -1,5 +1,4 @@
 ###
-# this is unaltered by MF
 # app configuration
 # https://docs.pylonsproject.org/projects/pyramid/en/1.10-branch/narr/environment.html
 ###
@@ -7,7 +6,7 @@
 [app:main]
 use = egg:michelanglo_app
 
-pyramid.reload_templates = truemich
+pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
