:u7981: why does not go?

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ test
 .sqlite
 .egg-info
 *.egg-info
+PyMOL_NGL_transpiler_app.egg-info
 PyMOL_NGL_transpiler_app.egg-info/*
 michelanglo_app.egg-info/*
 *.p
