:angry: I cannot get postgres to work on Windows. And it is just for dev...

--- a/win-prod.ini
+++ b/win-prod.ini
@@ -22,7 +22,7 @@ auth.secret = TIMbarrel
 
 [server:main]
 use = egg:waitress#main
-listen = localhost:8088
+listen = *:8088
 ### remember to change this to localhost when off Wellcome PC.
 
 [alembic]
