:angry: Postgres on my networked machine aint happening.

--- a/production.ini
+++ b/production.ini
@@ -11,7 +11,7 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-sqlalchemy.url = postgresql://michelanglo:protein@0.0.0.0:5432/users.psql
+sqlalchemy.url = sqlite:///%(here)s/users.sqlite
 retry.attempts = 3
 auth.secret = TIMbarrel
 
