:file_folder: db_switch

--- a/production.ini
+++ b/production.ini
@@ -11,7 +11,8 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-sqlalchemy.url = sqlite:///%(here)s/users.sqlite
+sqlalchemy.url = %(sql_url)
+#postgresql:///pyramidtest
 retry.attempts = 3
 auth.secret = TIMbarrel
 
@@ -21,7 +22,7 @@ auth.secret = TIMbarrel
 
 [server:main]
 use = egg:waitress#main
-listen = localhost:8088
+listen = 0.0.0.0:8088
 ### remember to change this to localhost when off Wellcome PC.
 
 [alembic]
