--- a/development.ini
+++ b/development.ini
@@ -12,6 +12,8 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+pyramid.includes = pyramid_debugtoolbar
+
 sqlalchemy.url = sqlite:///%(here)s/users.sqlite
 retry.attempts = 3
 auth.secret = TIMbarrel
