--- a/production.ini
+++ b/production.ini
@@ -11,7 +11,7 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-sqlalchemy.url = %(sql_url)
+sqlalchemy.url = %(sql_url)s
 #postgresql:///pyramidtest
 retry.attempts = 3
 auth.secret = TIMbarrel
