:robot: sentry integration

--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,7 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/users.sqlite
+sqlalchemy.url = %(sql_url)s
 retry.attempts = 3
 auth.secret = TIMbarrel
 
