--- a/development.ini
+++ b/development.ini
@@ -48,11 +48,11 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = INFO
 handlers = console
 
 [logger_michelanglo_app]
-level = WARN
+level = INFO
 handlers =
 qualname = michelanglo_app
 
