:wrench: fixed and improved logging.

--- a/development.ini
+++ b/development.ini
@@ -13,8 +13,10 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = pyramid_debugtoolbar
+debugtoolbar.panels = headers logging performance renderings request_vars sqlalchemy traceback
 
 sqlalchemy.url = %(sql_url)s
+#postgresql:///pyramidtest
 retry.attempts = 3
 auth.secret = TIMbarrel
 
@@ -24,7 +26,7 @@ auth.secret = TIMbarrel
 
 [server:main]
 use = egg:waitress#main
-listen = *:8088
+listen = 0.0.0.0:8088
 ### remember to change this to localhost when off Wellcome PC.
 
 [alembic]
@@ -41,6 +43,12 @@ file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 [loggers]
 keys = root, michelanglo_app
 
+#[handler_filelog]
+#class = FileHandler
+#args = ('%(here)s/michelanglo_app.log','a')
+#level = INFO
+#formatter = generic
+
 [handlers]
 keys = console
 
@@ -48,18 +56,18 @@ keys = console
 keys = generic
 
 [logger_root]
-level = INFO
+level = DEBUG
 handlers = console
 
 [logger_michelanglo_app]
-level = INFO
-handlers =
+level = DEBUG
+handlers = console
 qualname = michelanglo_app
 
 [handler_console]
 class = StreamHandler
-args = (sys.stderr,)
-level = NOTSET
+args = (sys.stdout,)
+level = DEBUG
 formatter = generic
 
 [formatter_generic]
