--- a/production.ini
+++ b/production.ini
@@ -39,6 +39,12 @@ file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 [loggers]
 keys = root, michelanglo_app
 
+#[handler_filelog]
+#class = FileHandler
+#args = ('%(here)s/michelanglo_app.log','a')
+#level = INFO
+#formatter = generic
+
 [handlers]
 keys = console
 
@@ -46,18 +52,18 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = INFO
 handlers = console
 
 [logger_michelanglo_app]
-level = WARN
-handlers =
+level = INFO
+handlers = console
 qualname = michelanglo_app
 
 [handler_console]
 class = StreamHandler
-args = (sys.stderr,)
-level = NOTSET
+args = (sys.stdout,)
+level = WARN
 formatter = generic
 
 [formatter_generic]
