--- a/development.ini
+++ b/development.ini
@@ -43,25 +43,25 @@ file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 [loggers]
 keys = root, michelanglo_app
 
-#[handler_filelog]
-#class = FileHandler
-#args = ('%(here)s/michelanglo_app.log','a')
-#level = INFO
-#formatter = generic
+[handler_filelog]
+class = FileHandler
+args = ('%(here)s/michelanglo_app.log','a')
+level = INFO
+formatter = generic
 
 [handlers]
-keys = console
+keys = console, filelog
 
 [formatters]
 keys = generic
 
 [logger_root]
 level = DEBUG
-handlers = console
+handlers = console, filelog
 
 [logger_michelanglo_app]
 level = DEBUG
-handlers = console
+handlers = console, filelog
 qualname = michelanglo_app
 
 [handler_console]
