:art: more improvements

--- a/development.ini
+++ b/development.ini
@@ -67,7 +67,7 @@ qualname = michelanglo_app
 [handler_console]
 class = StreamHandler
 args = (sys.stdout,)
-level = DEBUG
+level = INFO
 formatter = generic
 
 [formatter_generic]
