--- a/development.ini
+++ b/development.ini
@@ -15,7 +15,7 @@ pyramid.default_locale_name = en
 pyramid.includes = pyramid_debugtoolbar
 debugtoolbar.panels = headers logging performance renderings request_vars sqlalchemy traceback
 
-sqlalchemy.url = %(sql_url)s
+sqlalchemy.url = %(SQL_URL)s
 #postgresql:///pyramidtest
 retry.attempts = 3
 auth.secret = TIMbarrel
