--- a/production.ini
+++ b/production.ini
@@ -6,7 +6,7 @@
 [app:main]
 use = egg:michelanglo_app
 
-pyramid.reload_templates = true
+pyramid.reload_templates = false
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
