:bug: double entries in log.

--- a/development.ini
+++ b/development.ini
@@ -60,7 +60,7 @@ handlers = console, filelog
 
 [logger_michelanglo_app]
 level = DEBUG
-handlers = console, filelog
+handlers =
 qualname = michelanglo_app
 
 [handler_console]
