--- a/production.ini
+++ b/production.ini
@@ -57,7 +57,7 @@ handlers = filelog
 
 [logger_michelanglo_app]
 level = INFO
-handlers = filelog
+handlers =
 qualname = michelanglo_app
 
 [handler_console]
