:wrench: inconsistent "encryption_key" variable fixed

--- a/production.ini
+++ b/production.ini
@@ -15,6 +15,8 @@ sqlalchemy.url = %(SQL_URL)s
 #postgresql:///pyramidtest
 retry.attempts = 3
 auth.secret = TIMbarrel
+scheduler.days_delete_unedited = 30
+scheduler.days_delete_untouched = 365
 
 ###
 # wsgi server configuration.
