:art: cleanup of git repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,21 @@ apscheduler
 psycopg2-binary
 sentry-sdk
 bcrypt
+plaster_pastedeploy
+pyramid
+pyramid_mako
+pyramid_debugtoolbar
+waitress
+alembic
+pyramid_retry
+pyramid_tm
+SQLAlchemy
+transaction
+zope.sqlalchemy
+bcrypt
+numpy
+pycrypto
+markdown
+psycopg2-binary
+requests
+sentry-sdk
