:package: one of the packages changed names...

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "michelanglo_app/static/ThirdParty/ngl"]
 	path = michelanglo_app/static/ThirdParty/ngl
 	url = https://github.com/arose/ngl.git
+[submodule "michelanglo_app/static/ThirdParty/popper"]
+	path = michelanglo_app/static/ThirdParty/popper
+	url = https://github.com/popperjs/popper.js.git
