:construction: moved to pymol2

--- a/development.ini
+++ b/development.ini
@@ -71,7 +71,7 @@ qualname = michelanglo_app
 [handler_console]
 class = StreamHandler
 args = (sys.stdout,)
-level = INFO
+level = DEBUG
 formatter = generic
 
 [formatter_generic]
