:hammer: changed delete time to 1,000 days.

--- a/production.ini
+++ b/production.ini
@@ -15,8 +15,9 @@ sqlalchemy.url = %(SQL_URL)s
 #postgresql:///pyramidtest
 retry.attempts = 3
 auth.secret = TIMbarrel
+# this is no longer used...
 scheduler.days_delete_unedited = 30
-scheduler.days_delete_untouched = 365
+scheduler.days_delete_untouched = 1000
 
 ###
 # wsgi server configuration.
