:hammer: rotating logfile

--- a/production.ini
+++ b/production.ini
@@ -43,8 +43,8 @@ file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 keys = root, michelanglo_app
 
 [handler_filelog]
-class = FileHandler
-args = ('%(here)s/michelanglo_app.log','a')
+class = handlers.RotatingFileHandler
+args = ('%(here)s/michelanglo_app.log','a', 1_000_000, 5)
 level = INFO
 formatter = generic
 
@@ -66,7 +66,7 @@ qualname = michelanglo_app
 [handler_console]
 class = StreamHandler
 args = (sys.stdout,)
-level = WARN
+level = ERROR
 formatter = generic
 
 [formatter_generic]
