:warning: refactoring user-data out of the module :warning:

--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,18 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = pyramid_debugtoolbar
 debugtoolbar.panels = headers logging performance renderings request_vars sqlalchemy traceback
-sqlalchemy.url = %(SQL_URL)s
+sqlalchemy.url = sqlite:///demo.db
+# previously the environmental variable overides where in app.py, now they are in env_override
+# sqlalchemy.url = %(SQL_URL)s
+michelanglo.user_data_folder = ../user-data
+michelanglo.protein_data_folder = ../protein-data
+michelanglo.secretcode = error
+michelanglo.admin_email =
+michelanglo.server_email =
+sentry.data_source_name =
+slack.webhook =
+# this is not okay for production
+puppeteer.executablePath = /bin/chromium-browser
 ###
 #
 # postgresql:///pyramidtest
@@ -49,7 +60,7 @@ keys = root, michelanglo_app
 
 [handler_filelog]
 class = FileHandler
-args = ('%(here)s/michelanglo_app.log','a')
+args = ('%(here)s/michelanglo.log','a')
 level = INFO
 formatter = generic
 
