:hammer: configs now support the various options. Still over-ridable

--- a/development.ini
+++ b/development.ini
@@ -24,7 +24,7 @@ michelanglo.admin_email =
 michelanglo.server_email =
 sentry.data_source_name =
 slack.webhook =
-# this is not okay for production
+# this is not okay for production -- change plz
 puppeteer.executablePath = /bin/chromium-browser
 ###
 #
