--- a/production.ini
+++ b/production.ini
@@ -11,13 +11,26 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-sqlalchemy.url = %(SQL_URL)s
-#postgresql:///pyramidtest
+
+sqlalchemy.url = sqlite:///demo.db #postgresql:///
+# previously the environmental variable overides where in app.py, now they are in env_override
+# sqlalchemy.url = %(SQL_URL)s
+michelanglo.user_data_folder = ../user-data
+michelanglo.protein_data_folder = ../protein-data
+michelanglo.secretcode = error
+michelanglo.admin_email =
+michelanglo.server_email =
+sentry.data_source_name =
 retry.attempts = 3
 auth.secret = TIMbarrel
 # this is no longer used...
 scheduler.days_delete_unedited = 30
 scheduler.days_delete_untouched = 365
+slack.webhook =
+# this is not okay for production -- change plz
+puppeteer.executablePath = /bin/chromium-browser
+
+
 
 ###
 # wsgi server configuration.
