:hammer: notify_admin and email were still running of env variables

--- a/production.ini
+++ b/production.ini
@@ -57,7 +57,7 @@ keys = root, michelanglo_app
 
 [handler_filelog]
 class = handlers.RotatingFileHandler
-args = ('%(here)s/michelanglo_app.log','a', 1_000_000, 5)
+args = ('%(here)s/michelanglo.log','a', 1_000_000, 5)
 level = INFO
 formatter = generic
 
