:pencil: INI entries should be lowercase

--- a/development.ini
+++ b/development.ini
@@ -25,7 +25,7 @@ michelanglo.server_email =
 sentry.data_source_name =
 slack.webhook =
 # this is not okay for production -- change plz
-puppeteer.executablePath = /bin/chromium-browser
+puppeteer.executablepath = /bin/chromium-browser
 ###
 #
 # postgresql:///pyramidtest
