--- a/production.ini
+++ b/production.ini
@@ -28,7 +28,7 @@ scheduler.days_delete_unedited = 30
 scheduler.days_delete_untouched = 365
 slack.webhook =
 # this is not okay for production -- change plz
-puppeteer.executablePath = /bin/chromium-browser
+puppeteer.executablepath = /bin/chromium-browser
 
 
 
