:hammer: the debug toolbar is more of a pain at this stage

--- a/development.ini
+++ b/development.ini
@@ -12,8 +12,8 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-pyramid.includes = pyramid_debugtoolbar
-debugtoolbar.panels = headers logging performance renderings request_vars sqlalchemy traceback
+# pyramid.includes = pyramid_debugtoolbar
+# debugtoolbar.panels = headers logging performance renderings request_vars sqlalchemy traceback
 sqlalchemy.url = sqlite:///demo.db
 # previously the environmental variable overides where in app.py, now they are in env_override
 # sqlalchemy.url = %(SQL_URL)s
