:pencil: comments were messy

--- a/production.ini
+++ b/production.ini
@@ -11,26 +11,24 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-
-sqlalchemy.url = sqlite:///demo.db #postgresql:///
+scheduler.days_delete_unedited = 30
+scheduler.days_delete_untouched = 1095
+puppeteer.executablepath = /bin/chromium-browser
+#postgresql:///
 # previously the environmental variable overides where in app.py, now they are in env_override
 # sqlalchemy.url = %(SQL_URL)s
+sqlalchemy.url = sqlite:///demo.db
 michelanglo.user_data_folder = ../user-data
 michelanglo.protein_data_folder = ../protein-data
 michelanglo.secretcode = error
+slack.webhook =
 michelanglo.admin_email =
 michelanglo.server_email =
 sentry.data_source_name =
+# misc.
 retry.attempts = 3
-auth.secret = TIMbarrel
 # this is no longer used...
-scheduler.days_delete_unedited = 30
-scheduler.days_delete_untouched = 365
-slack.webhook =
-# this is not okay for production -- change plz
-puppeteer.executablepath = /bin/chromium-browser
-
-
+auth.secret = TIMbarrel
 
 ###
 # wsgi server configuration.
